<resources>
    <string name="app_name">Mi Monedero</string>
    <string name="login_title">Log In</string>
    <string name="login_subtitle">Join the app</string>
    <string name="login_button">accept</string>
    <string name="login_sign_up_button">sign up</string>
    <string name="login_email_input_hint">email</string>
    <string name="login_password_input_hint">password</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_subtitle">Register</string>
    <string name="sign_up_button">sign up</string>
    <string name="sign_up_cancel_button">Cancel</string>
    <string name="name_input_edit">name</string>
    <string name="email_input_edit">email</string>
    <string name="password_input_edit">password</string>
    <string name="reply_password_input_edit">reply password</string>
    <string name="phone_number_input_edit">phone number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_movements">Movements</string>
    <string name="menu_expenses">expenses</string>
    <string name="menu_income">Income</string>
    <string name="explain_expenses">"En esta pantalla se podrán registrar los gastos que ha tenido la persona "</string>
    <string name="explain_income">En este fragmento los usuairos podrán registrar sus ingresos</string>
    <string name="explain_movements">en este fragmento los usuarios podrán ver sus movimientos</string>
    <string name="explain_home">en esta pantalla los usuarios podrán visualizar todos los elementos y funcionalidades de la app</string>
    <string name="explain_reports">en este fragmento los usuarios visualizarán un reporte de sus estado finaciero</string>
    <string name="example">Example</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="developer">by: davito</string>
    <string name="income_subtitle">record an income</string>
    <string name="income_hint">amount</string>
    <string name="Salary_category">salary</string>
    <string name="loan_category">Loan</string>
    <string name="Commissions_category">Commissions</string>
    <string name="others_category">others</string>
    <string name="save_button">save</string>
    <string name="outcome_subtitle">record an outcome</string>
    <string name="home_category">home</string>
    <string name="food_category">food</string>
    <string name="category_education">education</string>
    <string name="mount_incomes">amount incomes</string>
    <string name="mount_outcome">amount outcomes</string>
    <string name="home">Home</string>
</resources>