<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.davito.mimonerdero.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_fragment_to_income_fragment"
            app:destination="@id/income_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_expenses_fragment"
            app:destination="@id/expenses_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_movements_fragment"
            app:destination="@id/movements_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_reports_fragment"
            app:destination="@id/reports_fragment" />
    </fragment>
    <fragment
        android:id="@+id/income_fragment"
        android:name="com.davito.mimonerdero.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />
    <fragment
        android:id="@+id/expenses_fragment"
        android:name="com.davito.mimonerdero.ui.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />
    <fragment
        android:id="@+id/reports_fragment"
        android:name="com.davito.mimonerdero.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />
    <fragment
        android:id="@+id/movements_fragment"
        android:name="com.davito.mimonerdero.ui.movements.MovementsFragment"
        android:label="@string/menu_movements"
        tools:layout="@layout/fragment_movements" />
</navigation>