<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund_cell"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/login_image_view"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monedero_image"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Home_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image_view" />

    <Button
        android:id="@+id/income_buton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="348dp"
        android:text="@string/menu_income"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/outcome_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="348dp"
        android:text="@string/menu_expenses"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/income_buton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Movements_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/menu_movements"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_buton" />

    <Button
        android:id="@+id/reportsButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/menu_reports"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/Movements_button"
        app:layout_constraintTop_toBottomOf="@+id/outcome_button" />


</androidx.constraintlayout.widget.ConstraintLayout>