<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund_cell"
    tools:context=".ui.signup.SignUpActivity">

    <ImageView
        android:id="@+id/signup_image_view"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monedero_image"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/signup_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/sign_up_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_image_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_constrain_layout"
        android:layout_width="318dp"
        android:layout_height="412dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/backgraund_card"
        app:circularflow_defaultRadius="32dp"
        app:circularflow_radiusInDP="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title_text_view"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/login_subtitle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_subtitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/sign_up_button_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="17dp"
            android:text="@string/sign_up_button"
            android:textColor="@color/secundary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/cancel_button_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="17dp"
            android:text="@string/sign_up_cancel_button"
            android:textColor="@color/secundary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_button_text_view" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/name_input_edit"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_subtitle_text_view" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/email_input_edit"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/password_input_edit"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

        <EditText
            android:id="@+id/reply_password_edit_text"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/reply_password_input_edit"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/phone_number_input_edit"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reply_password_edit_text" />

        <EditText
            android:id="@+id/job_edit_text"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="job"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>