<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund_cell"
    tools:context=".ui.reports.ReportsFragment">

    <ImageView
        android:id="@+id/back_image_view"
        android:layout_width="63dp"
        android:layout_height="49dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/explain_income"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/outcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="48dp"
        android:text="@string/mount_outcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/income_tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="80dp"
        android:text="@string/mount_incomes"
        app:layout_constraintEnd_toStartOf="@+id/outcome_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outcome_amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        android:text="@string/example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outcome_title" />

    <TextView
        android:id="@+id/income_amount_text_vie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="136dp"
        android:text="@string/example"
        app:layout_constraintEnd_toStartOf="@+id/outcome_amount_text_view"
        app:layout_constraintTop_toBottomOf="@+id/income_tile" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="341dp"
        android:layout_height="406dp"
        android:layout_marginTop="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>